# hithit_bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  fly.toml
.github/workflows/: analysis.yml  deploy.yml  sentry.yml  test.yml
.sqlx/: query-2f23c0ec287fe40df0e23b913e325e7c11c6330d9162139cc4f49aef99fde5d5.json  query-5c88136dd9ec0ece5e5432f9c15e69585b45d1cf952430a944305654711afb3c.json  query-74e289526485675356b1adcffb4610e2d5fb4f4c1f39d0243db7984702524c08.json
migrations/: 20240912072545_init.sql
src/: axum_listener.rs  dispatcher.rs  elaborator.rs  error.rs  fmt.pest  formatter.rs  handlers.rs  main.rs  memory.rs  process.rs  segments.rs  utils.rs
src/formatter/: curly.rs  mod.rs  naive.rs
src/listener/: mod.rs  webhook.rs
src/parser/: curly.rs  mod.rs  naive.rs
