[package]
name = "hithit_bot"
version = "0.1.0"
authors = ["PhotonQuantum <self@lightquantum.me>"]
edition = "2021"
license = "MIT"

[features]
default = ["webhook"]
webhook = ["teloxide-listener/webhook"]

[dependencies]
const_format = "0.2"
log = "0.4"
lru-cache = "0.1"
maplit = "1"
parking_lot = "0.12"
pest = "2.1"
pest_derive = "2.1"
pretty_env_logger = "0.4"
ranges = "0.3"
serde = "1"
serde_json = "1"
teloxide = { version = "0.6", default-features = false, features = ["ctrlc_handler", "rustls", "auto-send"] }
teloxide-listener = { git = "https://github.com/PhotonQuantum/teloxide-listener" }
thiserror = "1.0"
tokio = { version = "1.16", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
