[package]
name = "hithit_bot"
version = "0.1.0"
authors = ["PhotonQuantum <self@lightquantum.me>"]
edition = "2021"
license = "MIT"
build = "build.rs"

[features]
default = ["webhook"]
webhook = ["teloxide-listener/webhook"]

[dependencies]
const_format = "0.2"
color-eyre = "0.6"
eyre = "0.6"
log = "0.4"
lru-cache = "0.1"
maplit = "1"
once_cell = "1.17"
parking_lot = "0.12"
pest = "2.5"
pest_derive = "2.5"
pretty_env_logger = "0.4"
ranges = "0.3"
sentry = { version = "0.30", default-features = false, features = ["tracing", "backtrace", "contexts", "panic", "reqwest", "rustls"] }
futures-core = "0.3"
serde = "1.0"
serde_json = "1.0"
teloxide = { version = "0.7", default-features = false, features = ["ctrlc_handler", "cache-me", "dispatching2", "rustls", "auto-send"] }
teloxide-listener = "0.1.0-beta.1"
thiserror = "1.0"
tokio = { version = "1.26", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7", default-features = false, features = ["git"] }