[package]
name = "hithit_bot"
version = "0.1.0"
authors = ["PhotonQuantum <self@lightquantum.me>"]
edition = "2021"
license = "MIT"
build = "build.rs"

[features]
default = ["webhook"]
webhook = ["teloxide/webhooks-axum", "axum"]

[dependencies]
axum = { version = "0.7", optional = true }
const_format = "0.2"
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
log = "0.4"
lru-cache = "0.1"
maplit = "1"
once_cell = "1.21"
parking_lot = "0.12"
pest = "2.8"
pest_derive = "2.8"
pretty_env_logger = "0.5"
ranges = "0.4"
sentry = { version = "0.41", default-features = false, features = ["tracing", "backtrace", "contexts", "panic", "reqwest", "rustls"] }
futures-core = "0.3"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "migrate", "macros", "postgres"] }
teloxide = { version = "0.13", default-features = false, features = ["ctrlc_handler", "cache-me", "rustls", "macros"] }
thiserror = "2.0"
tokio = { version = "1.46", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
anyhow = "1.0"
vergen-gix = "1.0"